--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=PatodaLaVida
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/Levels/EmptyToNewJuego.EmptyToNewJuego
 GameDefaultMap=/Game/Levels/EmptyToNewJuego.EmptyToNewJuego
 TransitionMap=
 bUseSplitscreen=True
